--- a/src/styles/Utils.css
+++ b/src/styles/Utils.css
@@ -207,11 +207,12 @@ header {
   .header-button {
     border: 2px solid;
     border-radius: 100px;
-    width: 100px;
-    height: 45px;
+    width: 85px;
+    height: 40px;
+    font-size: 14px;
   }
   .header-button-flex {
-    margin-left: -5%;
+    margin-left: -15%;
   }
   .text-border-left {
     border-left: none;
